--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-spinkit": "^3.0.0",
+    "reactjs-popup": "^2.0.5",
+    "use-axios-client": "^2.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
